fix: Changed mockup image to a higher quality; Realigned Hero section to the left; Made Iphone container smaller on mobile screen
* feat: Added terms of use webpage;

* fix: removed the next.js project and made jekyll the main platform

* fix: removed link to other hero pages from navbar

* fix: removed link to other hero pages from navbar

* feat: Created the legal mentions page

* fix: Changed mockup image to a higher quality; Realigned Hero section to the left; Made Iphone container smaller on mobile screens

--- a/index.css
+++ b/index.css
@@ -122,13 +122,19 @@
 }
 
 .iphone {
-    width: 300px;
-    height: 600px;
+    width: 70vw;
+    height: auto;
+    max-width: 300px;
+    aspect-ratio: 9/18;
     background: #000;
     border: 5px solid #000;
     border-radius: 40px;
     position: relative;
     overflow: hidden;
+}
+
+.iphone img {
+    object-position: bottom;
 }
 
 .smaller_iphone {
@@ -162,6 +168,9 @@
         line-height: 110%;
         font-weight: 500;
     }
+    .contentRight{
+        width: 45%;
+    }
 }
 
 @media (max-width: 820px) {
@@ -171,6 +180,8 @@
 
     .content {
         flex-direction: column;
+        padding-left: 24px;
+        padding-right: 24px;
     }
 
     .contentLeft {
@@ -178,20 +189,21 @@
         margin-bottom: 90px;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: start;
     }
 
     .contentLeft h1 {
-        text-align: center;
+        text-align: left;
         margin-bottom: 15px;
     }
 
     .content h2 {
         margin-bottom: 80px;
-        text-align: center;
+        text-align: left;
     }
-    .content p{
-        text-align: center;
+
+    .content p {
+        text-align: left;
     }
 
     .contentRight {
@@ -204,14 +216,24 @@
         right: -250px;
     }
 
+    .contentCta button {
+        width: 250px
+    }
+}
+@media (max-width: 650px) {
+
     .contentCta {
+        width: 100%;
         flex-direction: column;
         align-items: center;
     }
 
     .contentCta button {
-        width: 200px;
+        width: 100%;
     }
+    .iphone{
+        max-width: 250px;
+    }    
 }
 
 /* SECTION 1 */
@@ -310,12 +332,14 @@
         width: 100%;
         padding-left: 0px;
     }
-    .sr1img{
+
+    .sr1img {
         margin-right: 0;
         width: 50px;
         height: 40px;
     }
-    .sr1img svg{
+
+    .sr1img svg {
         width: 40px;
         height: 40px;
     }
